Ignore numbers greater than 1000

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -40,3 +40,6 @@ Style/RedundantReturn:
 # SupportedStyles: single_quotes, double_quotes
 Style/StringLiterals:
   EnforcedStyle: double_quotes
+
+Metrics/BlockLength:
+  Enabled: false
